--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -292,6 +292,63 @@ jobs:
             }
           done
 
+  generate_visualizations:
+    runs-on: ubuntu-latest
+    needs: 
+      - setup
+      - vectorstore
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}
+
+      - name: Restore Poetry cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/pypoetry/cache
+            ~/.cache/pypoetry/artifacts
+          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+          restore-keys: ${{ runner.os }}-poetry-
+
+      - name: Set up Python & install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade poetry==2.2.0
+          poetry install --no-interaction --no-root
+          
+      - name: Ensure latest master
+        run: |
+          git fetch origin master
+          git rebase origin/master
+
+      - name: Generate embeddings visualizations
+        run: |
+          poetry run python -m jarokelo_tracker.eda.embeddings_visualization --demo --max-points 1000
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+    
+      - name: Commit and push visualizations
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          git add ./docs/embeddings/
+          git diff --quiet && git diff --staged --quiet || git commit -m "[Auto-commit] Update embeddings visualizations [skip ci]"
+          
+          RETRIES=10
+          for i in $(seq 1 $RETRIES); do
+            git pull --rebase
+            git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master && break || {
+              echo "Push failed, retrying ($i/$RETRIES)..."
+              sleep 3
+            }
+          done
+
   cleanup_vectorstore:
     runs-on: ubuntu-latest
     needs: 
